Bug 165700 - CTRL-F does not show the search in message dialog
Summary: CTRL-F does not show the search in message dialog
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-04 10:12 UTC by András Manţia
Modified: 2008-07-05 00:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description András Manţia 2008-07-04 10:12:42 UTC
Version:            (using Devel)
Installed from:    Compiled sources

As the title says: CTRL-F fails to show the dialog. Edit->Find in Message works.
Comment 1 Allen Winter 2008-07-05 00:07:02 UTC
SVN commit 828213 by winterz:

Fix the "CTRL-F does not show the search in message dialog" bug.
Sorta. Leave a FIXME for further investigation.

BUG: 165700


 M  +9 -5      kmmainwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=828213