Fix the "CTRL-F does not show the search in message dialog" bug. Sorta. Leave a FIXME for further investigation.

BUG: 165700

svn path=/trunk/KDE/kdepim/; revision=828213